==> lequangthinhhaui/modbus_stm32/FreeModbus_Slave-Master/RTU/HARDWARE/FreeModbus/port/no_os/porttimer_m.c <==
/*
 * FreeModbus Libary: RT-Thread Port
 * Copyright (C) 2013 Armink <armink.ztl@gmail.com>
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 *
 * File: $Id: porttimer_m.c,v 1.60 2013/08/13 15:07:05 Armink add Master Functions$
 */

/* ----------------------- Platform includes --------------------------------*/
#include "port.h"

/* ----------------------- Modbus includes ----------------------------------*/
#include "mb.h"
#include "mb_m.h"
#include "mbport.h"
#include "tim.h"

#if MB_MASTER_RTU_ENABLED > 0 || MB_MASTER_ASCII_ENABLED > 0
/* ----------------------- Variables ----------------------------------------*/


/* ----------------------- static functions ---------------------------------*/

/* ----------------------- Start implementation -----------------------------*/
BOOL xMBMasterPortTimersInit(USHORT usTimeOut50us)
{
    htim3.Instance = TIM3;
    htim3.Init.Prescaler = (uint16_t)(SystemCoreClock/20000)-1;
    htim3.Init.Period = usTimeOut50us;
    htim3.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
    //htim3.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_DISABLE;
    if (HAL_TIM_Base_Init(&htim3) != HAL_OK)
    {
      _Error_Handler(__FILE__, __LINE__);
    }
    return TRUE;
}

void vMBMasterPortTimersT35Enable()
{
    /* Set current timer mode, don't change it.*/
    vMBMasterSetCurTimerMode(MB_TMODE_T35);
    htim3.Instance->CNT=0;
    __HAL_TIM_CLEAR_IT(&htim3, TIM_IT_UPDATE);
    HAL_TIM_Base_Start_IT(&htim3);
}

void vMBMasterPortTimersConvertDelayEnable()
{
    //rt_tick_t timer_tick = MB_MASTER_DELAY_MS_CONVERT * RT_TICK_PER_SECOND / 1000;
    htim3.Instance = TIM3;
    htim3.Init.Prescaler = (uint16_t)(SystemCoreClock/1000)-1;
    htim3.Init.Period = MB_MASTER_DELAY_MS_CONVERT;
    htim3.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
    //htim3.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_DISABLE;
    if (HAL_TIM_Base_Init(&htim3) != HAL_OK)
    {
      _Error_Handler(__FILE__, __LINE__);
    }
    /* Set current timer mode, don't change it.*/
    vMBMasterSetCurTimerMode(MB_TMODE_CONVERT_DELAY);
    htim3.Instance->CNT=0;
    __HAL_TIM_CLEAR_IT(&htim3, TIM_IT_UPDATE);
    HAL_TIM_Base_Start_IT(&htim3);
}

void vMBMasterPortTimersRespondTimeoutEnable()
{
    //rt_tick_t timer_tick = MB_MASTER_TIMEOUT_MS_RESPOND * RT_TICK_PER_SECOND / 1000;
    htim3.Instance = TIM3;
    htim3.Init.Prescaler = (uint16_t)(SystemCoreClock/1000)-1;
    htim3.Init.Period = MB_MASTER_TIMEOUT_MS_RESPOND;
    htim3.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
    //htim3.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_DISABLE;
    if (HAL_TIM_Base_Init(&htim3) != HAL_OK)
    {
      _Error_Handler(__FILE__, __LINE__);
    }
    /* Set current timer mode, don't change it.*/
   
    vMBMasterSetCurTimerMode(MB_TMODE_RESPOND_TIMEOUT);
     htim3.Instance->CNT=0;
    __HAL_TIM_CLEAR_IT(&htim3, TIM_IT_UPDATE);
    HAL_TIM_Base_Start_IT(&htim3);
}

void vMBMasterPortTimersDisable()
{
    HAL_TIM_Base_Stop_IT(&htim3);
}


#endif
